<resources>
    <string name="app_name" translatable="false">Mr.Khalid</string>

    <string name="designed" translatable="false">Developed by \n Ahmed Khattab</string>

    <string name="signIn" translatable="false">تسجيل الدخول</string>
    <string name="signUp" translatable="false">تسجيل جديد</string>
    <string name="forgotPassword" translatable="false">هل نسيت الرقم السري؟</string>
    <string name="aboutYou" translatable="false">الملف الشخصي</string>
    <string name="forgetPassword" translatable="false">نسيت كلمة المرور</string>

    <string name="phone" translatable="false">رقم الهاتف</string>
    <string name="phoneParent" translatable="false">رقم هاتف ولي الأمر</string>
    <string name="email" translatable="false">البريد الإلكتروني</string>
    <string name="password" translatable="false">الرقم السري</string>

    <string name="validPhone" translatable="false">أدخل رقم هاتف صحيح</string>
    <string name="validPassword" translatable="false">أدخل رقم سري اكبر من 6 أحرف</string>
    <string name="enterYourName" translatable="false">أدخل أسمك بالكامل</string>
    <string name="validEmail" translatable="false">أدخل إيميل صحيح</string>
    <string name="pickYourDate" translatable="false">تاريخ الميلاد</string>
    <string name="iam" translatable="false">النوع</string>
    <string name="validUserName" translatable="false">أدخل الاسم بالكامل</string>
    <string name="fullName" translatable="false">الاسم بالكامل</string>
    <string name="textSuccess" translatable="false">نجاح</string>
    <string name="textError" translatable="false">خطأ</string>
    <string name="textNoInternet" translatable="false">هناك مشكلة في اتصالك بالانترنت</string>
    <string name="connectedToInternet" translatable="false">تأكد أن هاتفك متصلا بالانترنت</string>
    <string name="grade" translatable="false">الصف</string>
    <string name="image" translatable="false">أضف صورة شخصية</string>
    <string name="gender" translatable="false">اختر النوع</string>
    <string name="birthDate" translatable="false">اختر تاريخ الميلاد</string>
    <string name="send" translatable="false">إرسال</string>
    <string name="sendEmail" translatable="false">تم ارسال رساله الي ايميلك</string>
    <string name="incorrectEmailOrPassword" translatable="false">هناك خطأ في الايميل او الرقم السري</string>
    <string name="gradeNumber" translatable="false">أختر الصف الدراسي</string>
    <string name="first_grade">الأول الثانوي</string>
    <string name="second_grade">الثاني الثانوي</string>
    <string name="third_grade">الثالث الثانوي</string>

</resources>