<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignUpActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/background"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.13" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/id_SignUp_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/signUp"
                    android:textColor="@color/signUpSignInTextColor"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.23" />

                <!--  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_23sdp"
                    android:layout_marginEnd="@dimen/_23sdp"
                    android:background="@drawable/rect"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_23sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@null">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/userNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:fontFamily="@font/cairo_regular"
                            android:gravity="right|center"
                            android:hint="@string/fullName"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:id="@+id/id_view_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@color/lineColor" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_23sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@null">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:fontFamily="@font/cairo_regular"
                            android:gravity="right|center"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:id="@+id/id_view_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@color/lineColor" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_23sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@null">

                        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:fontFamily="@font/cairo_regular"
                            android:gravity="right|center"
                            android:hint="@string/password"
                            android:inputType="numberPassword"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:id="@+id/id_view_3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@color/lineColor" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signUpButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:background="@drawable/rectsignin"
                        android:fontFamily="@font/cairo_regular"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textColor="@color/thirdText"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.9" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/SignInTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/signIn"
                    android:textColor="@color/signUpSignInTextColor"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline3" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_40sdp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading-animation.json"
            app:lottie_imageAssetsFolder="images/"
            app:lottie_loop="true" />

    </RelativeLayout>
</layout>